# tool_for_writers_or_screenwriters

./: .dockerignore  .env.example  .gitignore  .prospector.yaml  README.md  docker-compose.yml  package.json  prospector-config.json  pyproject.toml  requirements.txt  run_all_tests.sh
backend/: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  requirements.txt  run.py  setup.sh
backend/app/: __init__.py
backend/app/models/: __init__.py  annotation.py  autosave.py  base.py  chapter.py  draft.py  export.py  project.py  scene.py  user.py
backend/app/routes/: annotations.py  auth.py  autosave.py  chapters.py  drafts.py  export.py  exports.py  projects.py  scenes.py  timeline.py
backend/app/schemas/: annotation_schema.py  auth_schema.py  autosave_version_schema.py  chapter_schema.py  draft_schema.py  export_schema.py  project_schema.py  register_schema.py  scene_schema.py
backend/app/services/: auth_service.py
backend/app/utils/: jwt_required.py
backend/models/: __init__.py  annotation.py  autosave_version.py  chapter.py  draft.py  export.py  export_metadata.py  project.py  scene.py  user.py
frontend/: .prettierrc  jest.config.cjs  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
frontend/src/: setupTests.ts
frontend/src/api/: axiosConfig.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: Login.tsx  Register.tsx
tests/app/models/: test_models.py
tests/app/routes/: test_annotations.py  test_auth.py  test_autosave.py  test_chapters.py  test_drafts.py  (+5 more)
(+3 files in other folders)
